[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Florian Boucault", email = "florian@boucault.net"},
]
dependencies = [
    "RocksDict>=0.3.17",
    "speedict>=0.3.11",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-benchmark>=4.0.0",
    "cachetools>=5.3.2",
    "tqdm>=4.66.1",
    "dask[distributed]>=2023.11.0",
    "ray[default]>=2.8.0",
    "bokeh>=3.3.1",
]
